// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`List rendering render as div and div doesn't throw 1`] = `
<div>
  <div
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    role="list"
  >
    <div
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-1"
      role="listitem"
    >
      First ListItem
    </div>
    <div
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-2"
      role="listitem"
    >
      Second ListItem
    </div>
  </div>
</div>
`;

exports[`List rendering render as div by default when navigationMode is 'composite' 1`] = `
<div>
  <div
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    role="grid"
  >
    <div
      class="fui-ListItem"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true},\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-1"
      role="row"
      tabindex="0"
    >
      First ListItem
    </div>
    <div
      class="fui-ListItem"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true},\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-2"
      role="row"
      tabindex="0"
    >
      Second ListItem
    </div>
  </div>
</div>
`;

exports[`List rendering renders a default state 1`] = `
<div>
  <ul
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    role="list"
  >
    <li
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-1"
      role="listitem"
      value="test-value-1"
    >
      First ListItem
    </li>
    <li
      class="fui-ListItem"
      data-tabster="{\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-2"
      role="listitem"
      value="test-value-2"
    >
      Second ListItem
    </li>
  </ul>
</div>
`;

exports[`List selection multiselect items are properly rendered with all attributes 1`] = `
<div>
  <ul
    aria-multiselectable="true"
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    role="listbox"
  >
    <li
      aria-selected="false"
      class="fui-ListItem"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true},\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-1"
      role="option"
      tabindex="0"
      value="test-value-1"
    >
      <span
        class="fui-Checkbox fui-ListItem__checkmark"
      >
        <input
          class="fui-Checkbox__input"
          id="checkbox-_r_1n_"
          tabindex="-1"
          type="checkbox"
        />
        <div
          aria-hidden="true"
          class="fui-Checkbox__indicator"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.76 3.2c.3.29.32.76.04 1.06l-4.25 4.5a.75.75 0 0 1-1.08.02L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.7 1.7L8.7 3.24a.75.75 0 0 1 1.06-.04Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </span>
      First ListItem
    </li>
    <li
      aria-selected="false"
      class="fui-ListItem"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true},\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-2"
      role="option"
      tabindex="0"
      value="test-value-2"
    >
      <span
        class="fui-Checkbox fui-ListItem__checkmark"
      >
        <input
          class="fui-Checkbox__input"
          id="checkbox-_r_1p_"
          tabindex="-1"
          type="checkbox"
        />
        <div
          aria-hidden="true"
          class="fui-Checkbox__indicator"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.76 3.2c.3.29.32.76.04 1.06l-4.25 4.5a.75.75 0 0 1-1.08.02L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.7 1.7L8.7 3.24a.75.75 0 0 1 1.06-.04Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </span>
      Second ListItem
    </li>
  </ul>
</div>
`;

exports[`List selection single select items are properly rendered with all attributes 1`] = `
<div>
  <ul
    class="fui-List"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":1,\\"memorizeCurrent\\":true}}"
    role="listbox"
  >
    <li
      aria-selected="false"
      class="fui-ListItem"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true},\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-1"
      role="option"
      tabindex="0"
      value="test-value-1"
    >
      <span
        class="fui-Checkbox fui-ListItem__checkmark"
      >
        <input
          class="fui-Checkbox__input"
          id="checkbox-_r_1j_"
          tabindex="-1"
          type="checkbox"
        />
        <div
          aria-hidden="true"
          class="fui-Checkbox__indicator"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.76 3.2c.3.29.32.76.04 1.06l-4.25 4.5a.75.75 0 0 1-1.08.02L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.7 1.7L8.7 3.24a.75.75 0 0 1 1.06-.04Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </span>
      First ListItem
    </li>
    <li
      aria-selected="false"
      class="fui-ListItem"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true},\\"groupper\\":{\\"tabbability\\":2},\\"focusable\\":{\\"ignoreKeydown\\":{\\"Enter\\":true}}}"
      id="test-value-2"
      role="option"
      tabindex="0"
      value="test-value-2"
    >
      <span
        class="fui-Checkbox fui-ListItem__checkmark"
      >
        <input
          class="fui-Checkbox__input"
          id="checkbox-_r_1l_"
          tabindex="-1"
          type="checkbox"
        />
        <div
          aria-hidden="true"
          class="fui-Checkbox__indicator"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.76 3.2c.3.29.32.76.04 1.06l-4.25 4.5a.75.75 0 0 1-1.08.02L2.22 6.53a.75.75 0 0 1 1.06-1.06l1.7 1.7L8.7 3.24a.75.75 0 0 1 1.06-.04Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="12"
            viewBox="0 0 12 12"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 4c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </span>
      Second ListItem
    </li>
  </ul>
</div>
`;
